# bifrost_bridge

./: .gitignore  01_cli.html  02_mlst.html  03_fastp.html  04_quast.html  05_plasmidfinder.html  06_amrfinderplus.html  06_bracken.html  07_bracken.html  08_pmlst.html  09_rmlst.html  10_shovill.html  11_ssiamb.html  99_bifrost.html  LICENSE  MANIFEST.in  README.md  core.html  dev-env.yaml  index.html  parsed_mlst.tsv  parsed_ssiamb.tsv  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: lint.yml  publish-conda.yml  publish-pypi.yml  tests.yml
bifrost_bridge/: _modidx.py  amrfinderplus.py  bifrost.py  bracken.py  cli.py  core.py  fastp.py  hello_world.py  mlst.py  plasmidfinder.py  pmlst.py  quast.py  rmlst.py  shovill.py  ssiamb.py
bifrost_bridge/config/: config.default.env  config.default.yaml
conda/: meta.yaml
galaxy/: bifrost_bridge.xml  macros.xml
galaxy/config/: mapping.yaml
galaxy/test-data/: mlst.tsv  mlst_output.tsv
nbs/: 00_core.ipynb  01_cli.ipynb  01_hello_world.ipynb  02_mlst.ipynb  03_fastp.ipynb  04_quast.ipynb  05_plasmidfinder.ipynb  06_amrfinderplus.ipynb  06_bracken.ipynb  07_bracken.ipynb  07_pmlst.ipynb  08_pmlst.ipynb  09_rmlst.ipynb  10_shovill.ipynb  11_ssiamb.ipynb  99_bifrost.ipynb  index.ipynb  nbdev.yml
src/bifrost_bridge/: __main__.py  _cli.py  amrfinderplus.py  bifrost.py  bracken.py  cli.py  core.py  fastp.py  mlst.py  plasmidfinder.py  pmlst.py  quast.py  rmlst.py  shovill.py  ssiamb.py
test_data/: 2506W58844.txt  2example.xml  TestSample2.json  amrfinderbug.tsv  amrfinderbug_testout.tsv  amrfinderplus_empty_testout.tsv  amrfinderplus_long_example.tsv  amrfinderplus_long_example_testout.tsv  amrfinderplus_testout.tsv  amrv.txt  bracken.tabular  bracken_krakenreport.txt  bracken_output2.tsv  bracken_test_out.tabular  export.json  exported_example.json  mlst_empty.tabular  mlst_rep_test.tsv  nested_example.json  nested_example_small.json  nested_export.json  nested_export_test.json  output.tsv  parsed_shovill_output.tsv  parsed_simple_output.tsv  plasmidfinder.tsv  plasmidfinder_testout.tsv  quast.tsv  quast_test_out.tsv  quast_test_out2.tsv  quast_transposed.tsv  rmlst.json  rmlst.tabular  rmlst_empty.tabular  rmlst_testout.tsv  rmlst_testout_custom_header.tsv  sample.json  sample.tsv  sample.xml  sample.yaml  (+4 more)
test_data/bifrost/: output.tsv  parsed_amrfinder.tsv  parsed_fastp.tsv  parsed_mlst.tsv  parsed_plasmidfinder.tsv  parsed_pmlst.tsv
tests/: test_parsers.py
