[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bifrost_bridge"
dynamic = ["version"]
description = "Normalize bioinformatics QC tool outputs into pipeline-friendly TSV summaries"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SSI-DK" },
]
dependencies = ["pandas", "pyyaml"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
bridge_mlst = "bifrost_bridge.mlst:process_mlst_data_from_cli"
bridge_fastp = "bifrost_bridge.fastp:process_fastp_data_from_cli"
bridge_quast = "bifrost_bridge.quast:process_quast_data_from_cli"
bridge_plasmidfinder = "bifrost_bridge.plasmidfinder:process_plasmidfinder_data_from_cli"
bridge_amrfinderplus = "bifrost_bridge.amrfinderplus:process_amrfinderplus_data_from_cli"
bridge_bracken = "bifrost_bridge.bracken:process_bracken_data_from_cli"
bridge_pmlst = "bifrost_bridge.pmlst:process_pmlst_data_from_cli"
bridge_rmlst = "bifrost_bridge.rmlst:process_rmlst_data_from_cli"
bridge_shovill = "bifrost_bridge.shovill:process_shovill_data_from_cli"
bridge_ssiamb = "bifrost_bridge.ssiamb:process_ssiamb_data_from_cli"
bridge_qc = "bifrost_bridge.bifrost:process_qc_data_from_cli"

[project.urls]
Homepage = "https://github.com/$GIT_USER_NAME/bifrost_bridge"
Repository = "https://github.com/$GIT_USER_NAME/bifrost_bridge"

[tool.hatch.version]
path = "src/bifrost_bridge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bifrost_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
