[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bifrost_bridge"
dynamic = ["version"]
description = "Normalize bioinformatics QC tool outputs into pipeline-friendly TSV summaries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
authors = [
    { name = "SSI-DK" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["pandas>=3.0.3,<4", "pyyaml>=6.0.3,<7"]

[project.optional-dependencies]
test = ["pytest>=9.1.0,<10", "pytest-cov>=7.1.0,<8"]
dev = ["pytest>=9.1.0,<10", "pytest-cov>=7.1.0,<8", "ruff>=0.15.18,<0.16"]

[project.scripts]
bridge_mlst = "bifrost_bridge.mlst:process_mlst_data_from_cli"
bridge_fastp = "bifrost_bridge.fastp:process_fastp_data_from_cli"
bridge_quast = "bifrost_bridge.quast:process_quast_data_from_cli"
bridge_plasmidfinder = "bifrost_bridge.plasmidfinder:process_plasmidfinder_data_from_cli"
bridge_amrfinderplus = "bifrost_bridge.amrfinderplus:process_amrfinderplus_data_from_cli"
bridge_bracken = "bifrost_bridge.bracken:process_bracken_data_from_cli"
bridge_pmlst = "bifrost_bridge.pmlst:process_pmlst_data_from_cli"
bridge_rmlst = "bifrost_bridge.rmlst:process_rmlst_data_from_cli"
bridge_shovill = "bifrost_bridge.shovill:process_shovill_data_from_cli"
bridge_ssiamb = "bifrost_bridge.ssiamb:process_ssiamb_data_from_cli"
bridge_qc = "bifrost_bridge.bifrost:process_qc_data_from_cli"

[project.urls]
Homepage = "https://github.com/ssi-dk/bifrost_bridge"
Repository = "https://github.com/ssi-dk/bifrost_bridge"
Issues = "https://github.com/ssi-dk/bifrost_bridge/issues"

[tool.hatch.version]
path = "src/bifrost_bridge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bifrost_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
